<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AxiomZenCars</string>
    <string name="splash_title">Axiom Zen Cars</string>
    <string name="splash_description">Built by Jackie Chen</string>
    <string name="image_content_description">Car Image</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="standard_price">Standard Price</string>

</resources>